Bug fix #6
No exhibiting list views.